--- a/assets/style.css
+++ b/assets/style.css
@@ -53,9 +53,7 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-body {
 
-}
 section {
 	margin-block: 6em;
 }
@@ -104,67 +102,90 @@ header {
 	background-color: var(--secondary-color);
 }
 
-#banner {
-	display: flex;
+.carousel {
+    display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
 	width: 100%;
 	min-height: 470px;
 	position: relative;
-}
-.banner-img {
-	position: absolute;
+  }
+  
+ .carousel-images {
+    position: absolute;
 	width: 100%;
 	height: 100%;
 	z-index: -1;
 	object-fit: cover;
-	object-position: center;
-}
-/* Code CSS en prévision de l'ajout d'un carousel pour la bannière */
-/* Gestion des fleches du carrousel */
-#banner .arrow {
+	object-position: cover;
+	transition: all 0.75s;
+  }
+  
+  .carousel-images img {
+    width: 100%;
+	height: 100%;
+	object-fit: cover;
 	position: absolute;
 }
-#banner .arrow_left {
-	left: 10px;
-}
-#banner .arrow_right {
-	right: 10px;
-}
-/* Gestion des points du carrousel */
-.dots {
-	position: absolute;
-	bottom: 40px;
+  
+  .carousel-navigation {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .bullet-points {
+    position: absolute;
 	display: flex;
-}
-.dot {
-	margin-inline: 5px;
+	bottom: 40px;
+  }
+
+  .bullet {
+    margin-inline: 5px;
 	width: 13px;
 	height: 13px;
 	background-color: #ffffff00;
 	border: 3px solid #fff;
 	border-radius: 100%;
 	box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);;
-}
-.dot_selected {
-	background-color: #fff;
-}
-/* Fin du code CSS pour le carousel */
-#banner p {
-	font-family: 'Roboto Slab', sans-serif;
+  }
+
+  .active {
+    background-color: #fff;
+  }
+
+
+  .prev-arrow {
+    position: absolute;
+	left: 5%;
+	top: 40%;
+    cursor: pointer;
+  }
+
+  .next-arrow {
+	position: absolute;
+	right: 5%;
+	top: 40%;
+    cursor: pointer;
+  }
+
+  .carousel-text p {
+    font-family: 'Roboto Slab', sans-serif;
 	font-weight: 900;
 	font-size: 50px;
 	line-height: 66px;
 	color: white;
 	text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
 	text-align: center;
-}
-#banner span {
-	display: block;
-	font-weight: 400;
-	font-size: 30px;
-}
+  }
+
+  .carousel-text span {
+    display: block;
+    font-weight: 400;
+    font-size: 30px;
+    margin-top: 5px;
+  }
 #about-us {
 	display: flex;
 }
