--- a/assets/style.css
+++ b/assets/style.css
@@ -127,6 +127,11 @@ header {
 	height: 100%;
 	object-fit: cover;
 	position: absolute;
+	display: none;
+}
+
+.carousel-images .active {
+display: block;
 }
   
   .carousel-navigation {
